Correção para quebra do rodapé

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -1331,6 +1331,10 @@ dl.portlet div.listingBar a:link {
 	font-size: 1.3em;
 }
 
+#doormat-container.columns-4 .doormatColumn {
+    width: 22%;
+}
+
 #footer {
 	background: #034811;
 	padding: 20px 0;
