--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -1746,7 +1746,6 @@ body.contraste #doormat-container .doormatColumn {
 
 	#portal-breadcrumbs,
 	#accessibility,
-	#barra-brasil,
 	#doormat-container,
 	#em-destaque {
 		display: none !important;
@@ -1904,6 +1903,7 @@ body.contraste #doormat-container .doormatColumn {
 
 /* iPhone 4s and greater than */
 @media screen and (max-width: 480px) {
+
 	#voltar-topo a { margin-right: .5em; }
 
 	#viewlet-social-like { right: 0; }
@@ -2026,6 +2026,16 @@ div.listingBar {
 
 ul.formTabs {
 	padding: 0px !important;
+}
+
+/* Barra de identidade do governo */
+@media screen and (max-width: 960px) {
+  #barra-brasil {
+    min-width: 100% !important
+  }
+  #barra-brasil .barra {
+      width: 98% !important
+  }
 }
 
 /* CSS de impressao */
