--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -1728,6 +1728,15 @@ body.contraste #doormat-container .doormatColumn {
 	display: none;
 }
 
+/* Correção largura tile de redes sociais */
+.fb_iframe_widget,
+.fb_iframe_widget span[style],
+.fb_iframe_widget iframe[style] {
+    width: 100% !important;
+    height: 100% !important;
+}
+/* Correção largura tile de redes sociais */
+
 /* celular  */
 @media only screen and (min-width : 320px) and (max-width : 768px) {
 
