--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -1735,6 +1735,15 @@ body.contraste #doormat-container .doormatColumn {
     width: 100% !important;
     height: 100% !important;
 }
+ul.social-tabs.css-tabs>li {
+    max-width: 48%;
+}
+ul.social-tabs.css-tabs>li:nth-child(1) {
+    margin-right: 2%;
+}
+ul.social-tabs.css-tabs>li>a {
+    max-width: 41%;
+}
 /* Correção largura tile de redes sociais */
 
 /* celular  */
