--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -1748,10 +1748,10 @@ body.contraste #doormat-container .doormatColumn {
 }
 
 /* Correção largura tile de redes sociais */
-.fb_iframe_widget,
-.fb_iframe_widget span[style],
-.fb_iframe_widget iframe[style],
-.twitter-timeline.twitter-timeline-rendered[style] {
+.social-panes .fb_iframe_widget,
+.social-panes .fb_iframe_widget span[style],
+.social-panes .fb_iframe_widget iframe[style],
+.social-panes .twitter-timeline.twitter-timeline-rendered[style] {
     width: 100% !important;
     height: 100% !important;
 }
