Retirado margin-top do #content h1 para que o H1 se comporte igual ao H2 na linha do topo

--- a/src/brasil/gov/temas/themes/verde/css/plone.css
+++ b/src/brasil/gov/temas/themes/verde/css/plone.css
@@ -379,6 +379,9 @@ margin: 1em 0.25em 2em 0.25em;
 body#content {
 margin: 1em;
 }
+#content h1 {
+margin-top: 0;
+}
 #content h1.documentFirstHeading {
 margin-top: 0;
 }
