--- a/src/brasil/gov/temas/themes/verde/css/plone.css
+++ b/src/brasil/gov/temas/themes/verde/css/plone.css
@@ -380,7 +380,7 @@ body#content {
 margin: 1em;
 }
 #content h1 {
-margin-top: 0;
+margin-top: 0.5em;
 }
 #content h1.documentFirstHeading {
 margin-top: 0;
