--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -27,6 +27,10 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 }
 
+#content h1 {
+    margin-top: 0 !important;
+}
+
 .modal {
 	top: 50% !important;
 }
