Adicionado fieldset para o formulário de busca, conforme recomendação do e-MAG

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -326,6 +326,11 @@ div.width-16 {
 
 /* Searchbox */
 
+.LSBox {
+    margin: 0;
+    padding: 0;
+    border: none;
+}
 
 input.searchField {
 	-moz-appearance: none;
