--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -217,6 +217,12 @@ div.width-16 {
 /* Personal tools */
 #portal-personaltools {
 	font-size: 1.2em;
+    top: 0px;
+    left: 0;
+    right: 90%;
+    float: left;
+    position: absolute;
+    width: 65px;
 }
 
 #language {
