Alterada posição do link de login para que o primeiro link aponte para o conteúdo, segundo sugerido pelo validador WCGA 2.0

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -218,8 +218,7 @@ div.width-16 {
 #portal-personaltools {
 	font-size: 1.2em;
     top: 0px;
-    left: 0;
-    right: 90%;
+    right: 0;
     float: left;
     position: absolute;
     width: 65px;
