--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -27,6 +27,10 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 }
 
+#content h1 {
+	margin-top: 0 !important;
+}
+
 .modal {
 	top: 50% !important;
 }
@@ -194,8 +198,10 @@ div.width-16 {
 }
 
 #logo #portal-title {
-	font-size: 4em;
+	margin: 0;
+	color: #fff;
 	font-weight: 800;
+	font-size: 4em;
 }
 
 #logo .luongo {
@@ -206,12 +212,16 @@ div.width-16 {
 
 #logo #portal-description {
 	font-size: 1.2em;
-	margin: -1em 0 0 0;
 	text-transform: uppercase;
 }
 
 /* Personal tools */
 #portal-personaltools {
+	position: absolute;
+	top: 0px;
+	right: 0;
+	float: left;
+	width: 65px;
 	font-size: 1.2em;
 }
 
@@ -321,6 +331,11 @@ div.width-16 {
 }
 
 /* Searchbox */
+.LSBox {
+	margin: 0;
+	padding: 0;
+	border: none;
+}
 
 
 input.searchField {
@@ -1157,7 +1172,11 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 .collection-item h1,
 .collection-item h2,
 .collection-item h3,
-.collection-item h4 {
+.collection-item h4,
+.list-item h1,
+.list-item h2,
+.list-item h3,
+.list-item h4 {
 	margin-bottom: 0.5em;
 }
 
@@ -1785,7 +1804,7 @@ ul.social-tabs.css-tabs>li>a {
 }
 /* Correção largura tile de redes sociais */
 
-#viewlet-social-like>span {
+#viewlet-social-like>div {
     display: block;
     float: right;
     margin-left: 3px;
