--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -518,6 +518,19 @@ p.section a {
 	text-align: left;
 }
 
+.newsImageContainer .photo-icon {
+	float: right;
+	background: url(../img/icone-foto-20.png) no-repeat;
+	width: 20px;
+	height: 20px;
+	overflow: hidden;
+	white-space: nowrap;
+	text-indent: 100%;
+	margin: 0 0 .5em 0;
+}
+
+.newsImageContainer .parent-nitf-image { display: block; }
+
 
 /* tabela */
 table.listing {
