--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -1553,6 +1553,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 	position: relative;
 	padding-left: 13%;
 	min-height: 120px;
+	margin: 30px 0;
 }
 
 .template-summary_view h2.tileHeadline,
@@ -1583,20 +1584,17 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 
 .template-summary_view #content .tileItem .documentByLine,
 .template-folder_summary_view #content .tileItem .documentByLine {
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: inline;
+	overflow: hidden;
+	padding-right: 5px;
+	width: 9%;
+	height: 90px;
 	border-right: 1px dotted #D6D6D6;
 	color: #7A8692;
-	display: inline;
 	font-size: 1em;
-	height: 90px;
-	left: 0;
-	overflow: hidden;
-	position: absolute;
-	padding-top: 30px;
-	text-indent: -135px;
-	top: 0;
-	width: 9%;
-	padding-right: 5px;
-	text-align: center;
 }
 
 .template-summary_view #content .description,
@@ -1621,11 +1619,6 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 	color: #7A8692;
 }
 
-.template-summary_view #content .tileItem .documentByLine span,
-.template-folder_summary_view #content .tileItem .documentByLine span {
-	display: none;
-}
-
 div.listingBar a:link,
 #content div.listingBar a:link,
 dl.portlet div.listingBar a:link {
@@ -1638,12 +1631,38 @@ dl.portlet div.listingBar a:link {
   /* generico, sem icone especifico */;
 }
 
-.tile-sc-embedder .documentByLine {
-	background: url(../img/sprite.png) no-repeat 20px -70px;
+.documentByLine .icon-type {
+	display: block;
+	overflow: hidden;
+	margin-top: 5px;
+	width: 19px;
+	height: 19px;
+	text-indent: 100%;
+	white-space: nowrap;
 }
 
-.tile-collective-nitf-content .documentByLine {
-	background: url(../img/sprite.png) no-repeat -44px -70px;
+.tile-sc-embedder .documentByLine .icon-type {
+	background: url(../img/cc-icons-19.png) no-repeat -1px -22px;
+}
+
+.tile-audio .documentByLine .icon-type {
+	background: url(../img/cc-icons-19.png) no-repeat -1px -1px;
+}
+
+.tile-page .documentByLine .icon-type {
+	background: url(../img/cc-icons-19.png) no-repeat -1px -43px;
+}
+
+.tile-images .documentByLine .icon-type {
+	background: url(../img/cc-icons-19.png) no-repeat -1px -85px;
+}
+
+.tile-aplicativos .documentByLine .icon-type {
+	background: url(../img/cc-icons-19.png) no-repeat -1px -106px;
+}
+
+.tile-folder .documentByLine .icon-type {
+	background: url(../img/cc-icons-19.png) no-repeat -1px -43px;
 }
 
 /*Search results*/
