--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -285,7 +285,7 @@ div.width-16 {
 #social-icons {
 	float: right;
 	clear: right;
-	margin-top: 10px;
+	margin: 10px 0;
 }
 
 #social-icons ul {
@@ -1556,7 +1556,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 .template-summary_view h1#parent-fieldname-title,
 .template-summary_view h1.documentFirstHeading,
 .template-folder_summary_view h1#parent-fieldname-title,
-.template-folder_summary_view h1.documentFirstHeading {
+.template-folder_summary_view #content h1.documentFirstHeading {
 	color: #2c67cd;
 	font-size: 2.4em;
 	font-weight: bold;
@@ -1579,15 +1579,21 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 .template-folder_summary_view h2.tileHeadline {
 	margin-bottom: 0;
 	font-size: 1.2em;
-	font-weight: normal;
+	font-weight: bold;
 	letter-spacing: 0.0001em;
-	text-transform: uppercase;
+	margin-top: 10px;
 }
 
 .template-summary_view h2.tileHeadline a.summary,
 .template-folder_summary_view h2.tileHeadline a.summary {
-	color: #2C67CD !Important;
-	font-size: 0.8em;
+	color: #000 !important;
+	font-size: 1.2em;
+}
+
+.template-folder_summary_view .subtitle {
+	color: #2C67CD !important;
+	font-weight: normal;
+	font-size: 1em;
 }
 
 .template-summary_view .tileImage,
@@ -1638,6 +1644,10 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 	color: #7A8692;
 }
 
+.template-folder_summary_view .documentDescription {
+	margin-top: 1em;
+}
+
 div.listingBar a:link,
 #content div.listingBar a:link,
 dl.portlet div.listingBar a:link {
@@ -1653,9 +1663,9 @@ dl.portlet div.listingBar a:link {
 .documentByLine .icon-type {
 	display: block;
 	overflow: hidden;
-	margin-top: 5px;
-	width: 19px;
-	height: 19px;
+	margin-top: 10px;
+	width: 20px;
+	height: 20px;
 	text-indent: 100%;
 	white-space: nowrap;
 }
@@ -1666,6 +1676,10 @@ dl.portlet div.listingBar a:link {
 
 .tile-audio .documentByLine .icon-type {
 	background: url(../img/sprite-icons.png) no-repeat -1px -1px;
+}
+
+.tile-collective-nitf-content .documentByLine .icon-type {
+	background: url(../img/sprite-icons.png) no-repeat -1px -64px;
 }
 
 .tile-page .documentByLine .icon-type {
