correção de css no portlet de "Politicas"

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -1088,6 +1088,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 }
 
 .portlet-collection-politicas .portletItem .portletItemDetails {
+	width: 0;
 	margin: 0;
 }
 
