Correção de espaçamento dos icones de tiles na aba layout

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -2401,3 +2401,6 @@ ul.formTabs {
 }
 
 #content .field textarea { resize: none; }
+
+/* correção de espaçamento dos icones de tiles na aba layout */
+#tiles-list .last-item { float:left; }
